spade-tests/src/snapshots/spade_tests__ast_lowering__access_undefined_pipeline_reg.snap
---
source: spade-tests/src/ast_lowering.rs
---
pipeline(3) main(clk: clock) -> int<8> {
        let a = stage(+2).d;
    reg;
    reg;
        let c = 0;
    reg;
        c
}


error: Could not find referenced variable
  ┌─ testinput:2:27
  │
2 │         let a = stage(+2).d;
  │                           ^ This variable could not be found

error: Type of a is not fully known
  ┌─ testinput:2:13
  │
2 │         let a = stage(+2).d;
  │             ^ The type of a is not fully known
  │
  = note: Found incomplete type: _
